k8/apigw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw-deployment
  labels:
    app: apigw-middleware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigw-middleware
  template:
    metadata:
      labels:
        app: apigw-middleware
    spec:
      containers:
        - name: apigw-middleware
          image: marcllort/car-rental-apigw:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firebase-config-volume
              mountPath: /app/
              readOnly: true # no editing!
      volumes:
        - name: firebase-config-volume
          secret:
            secretName: firebase-secret
