k8/calendar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-deployment
  labels:
    app: calendar-middleware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-middleware
  template:
    metadata:
      labels:
        app: calendar-middleware
    spec:
      containers:
        - name: calendar-middleware
          image: marcllort/car-rental-calendar:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: database-config-volume
              mountPath: /app/
              readOnly: true # no editing!
      volumes:
        - name: database-config-volume
          secret:
            secretName: dbcreds-secret
