k8/orchestrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-deployment
  labels:
    app: orchestrator-middleware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator-middleware
  template:
    metadata:
      labels:
        app: orchestrator-middleware
    spec:
      containers:
        - name: orchestrator-pod
          image: marcllort/car-rental-orchestrator:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firebase-config-volume
              mountPath: /app/
              readOnly: true # no editing!
      volumes:
        - name: firebase-config-volume
          secret:
            secretName: firebase-secret
