k8/apigw-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apigw-service
  name: apigw-service
spec:
  ports:
  - name: http
    port: 50000
    protocol: TCP
    targetPort: 8080
  selector:
    app: apigw-middleware
  type: NodePort
