k8/legal-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: legal-service
  name: legal-service
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: legal-middleware
