k8/rabbitmq-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq-internal
  labels:
    app: rabbitmq
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 15672
    - name: amqp
      protocol: TCP
      port: 5672
  selector:
    app: rabbitmq
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    type: LoadBalancer
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rabbitmq-amqp-port
      protocol: TCP
      port: 5672
      targetPort: 5672
